# clearlooks-phenix

./: LISEZ-MOI.md  README.md  README.mkd  index.theme
.github/workflows/: lint-workflows.yml  publish-release.yml
Clearwaita/: README.mkd
Clearwaita/doc/: LISEZ-MOI.mkd
Clearwaita/gtk-3.0/: gtk-widgets-assets.css
_src/: Makefile
doc/: LISEZ-MOI.md  LISEZ-MOI.mkd  README.md  README.mkd  images.sh.txt  version.txt
gtk-2.0/: applications.rc  gtkrc
gtk-3.0/: Makefile.am  applications.css  assets.txt  gnome-applications.css  gtk-dark.css  gtk-main-common.css  gtk-main-dark.css  gtk-main.css  gtk-variant.css  gtk-widgets-assets-dark.css  gtk-widgets-assets.css  gtk-widgets-backgrounds.css  gtk-widgets-borders-dark.css  gtk-widgets-borders.css  gtk-widgets-dark-overrides.css  gtk-widgets-img.css  gtk-widgets.css  gtk.css  gtk.gresource.xml  mate-applications.css  settings.ini
gtk-3.0/apps/: nautilus.css
gtk-3.0/assets/: Makefile.am
gtk-3.0/borders/: Makefile.am
metacity-1/: metacity-theme-1.xml  metacity-theme-3.xml
xfwm4/: bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  close-active.xpm  close-pressed.xpm  hide-active.xpm  hide-pressed.xpm  left-active.xpm  left-inactive.xpm  maximize-active.xpm  maximize-pressed.xpm  maximize-toggled-active.xpm  maximize-toggled-pressed.xpm  menu-active.xpm  right-active.xpm  right-inactive.xpm  themerc  title-3-active.xpm  top-left-active.xpm  top-right-active.xpm
