EXTRA_DIST = 		\
	button-border-focused.svg \
	button-border-focused-dark.svg \
	button-border.svg \
	button-border-dark.svg \
	generic-border-focused.svg \
	generic-border-focused-dark.svg \
	generic-border.svg \
	generic-border-alt.svg \
	generic-border-dark.svg \
	generic-border-dark-alt.svg \
	generic-border-unfocused.svg \
	generic-border-unfocused-alt.svg \
	generic-border-unfocused-dark.svg \
	generic-border-unfocused-dark-alt.svg \
	primary-toolbar-button-border-focused.svg \
	primary-toolbar-button-border-focused-dark.svg \
	primary-toolbar-button-border.svg \
	primary-toolbar-button-border-dark.svg \
	primary-toolbar-generic-border-focused.svg \
	primary-toolbar-generic-border-focused-dark.svg \
	primary-toolbar-generic-border.svg \
	primary-toolbar-generic-border-dark.svg \
	primary-toolbar-generic-border-unfocused.svg \
	primary-toolbar-generic-border-unfocused-dark.svg \
	tooltip-generic-border.svg \
	tooltip-generic-border-dark.svg \
	tooltip-generic-border-focused.svg \
	tooltip-generic-border-focused-dark.svg
